--- a/src/components/cards/project-card/project-card.css
+++ b/src/components/cards/project-card/project-card.css
@@ -101,6 +101,7 @@
 
     .popup-header {
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
         width: 100%;
