--- a/src/components/sections/contact/contact.css
+++ b/src/components/sections/contact/contact.css
@@ -1,5 +1,5 @@
 #contact {
-    background: url("/public/img/banner.png") no-repeat center 50%/cover, var(--color-primary);
+    background: url("/public/img/banner.jpg") no-repeat center 50%/cover, var(--color-primary);
     padding: 0;
     position: relative;
 
