Ajout d'un message "aucun projet ne correspond à votre recherche"

--- a/src/components/sections/projects/projects.css
+++ b/src/components/sections/projects/projects.css
@@ -51,4 +51,11 @@
         margin-bottom: 50px;
         padding: 40px 20px;
     }
+
+    .cards-container p {
+        font-size: small;
+        font-weight: 300;
+        text-align: center;
+        width: 100%;
+    }
 }
