Fix header popup

--- a/src/components/cards/project-card/project-card.css
+++ b/src/components/cards/project-card/project-card.css
@@ -6,71 +6,62 @@
     min-width: 300px;
     max-width: 300px;
     flex: 1;
-
-    .card-info {
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 0 0 10px 10px;
-
-        h3 {
-            text-align: center;
-            font-weight: 500;
-            margin-bottom: 20px;
-            letter-spacing: 1px;
-            font-size: medium;
-        }
-
-        .open-details {
-            cursor: pointer;
-            background-color: var(--color-primary);
-            border-radius: 5px;
-            padding: 5px 10px;
-            color: var(--color-text-light);
-            font-weight: 400;
-            letter-spacing: 2px;
-        }
-
-        .date {
-            font-weight: 300;
-            font-size: smaller;
-            color: var(--color-primary);
-        }
-
-        .tags {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            font-weight: 300;
-            font-size: smaller;
-            margin: 10px 0 20px 0;
-            flex-wrap: wrap;
-            justify-content: center;
-
-            span {
-                background-color: var(--color-bg);
-                border-radius: 5px;
-                padding: 5px 10px;
-            }
-        }
-    }
-
-    img {
-        width: 100%;
-        min-width: 100%;
-        height: 100%;
-        min-height: 200px;
-        border-radius: 10px 10px 0 0;
-        background: var(--color-bg);
-        object-fit: cover;
-    }
 }
-
+.project-card img {
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 200px;
+    border-radius: 10px 10px 0 0;
+    background: var(--color-bg);
+    object-fit: cover;
+}
+.project-card .card-info {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 10px 10px;
+}
+.project-card .card-info h3 {
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    font-size: medium;
+}
+.project-card .card-info .open-details {
+    cursor: pointer;
+    background-color: var(--color-primary);
+    border-radius: 5px;
+    padding: 5px 10px;
+    color: var(--color-text-light);
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+.project-card .card-info .date {
+    font-weight: 300;
+    font-size: smaller;
+    color: var(--color-primary);
+}
+.project-card .card-info .tags {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-weight: 300;
+    font-size: smaller;
+    margin: 10px 0 20px 0;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project-card .card-info .tags span {
+    background-color: var(--color-bg);
+    border-radius: 5px;
+    padding: 5px 10px;
+}
 .project-card:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
-
 .popup-bg {
     position: fixed;
     top: 0;
@@ -84,7 +75,6 @@
     justify-content: center;
     align-items: center;
 }
-
 .project-popup {
     width: 60%;
     max-height: 90vh;
@@ -98,116 +88,98 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     font-size: 1.2rem;
-
-    .popup-header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        border-bottom: 1px solid var(--color-a);
-
-        .popup-space {
-            padding: 1.5rem;
-        }
-
-        .card-title {
-            margin-top: 2.5rem;
-            font-weight: 500;
-            letter-spacing: 1px;
-        }
-
-        .popup-close {
-            margin: 1rem;
-            cursor: pointer;
-            transition: none;
-        }
-
-        .popup-close:hover {
-            color: #f00;
-        }
-    }
-
-    .popup-body {
-        padding: 1rem;
-        width: 60%;
-
-        .popup-img {
-            width: 100%;
-            height: auto;
-            margin: 1rem 0;
-        }
-
-        .popup-cont {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            .date {
-                font-weight: 300;
-                font-size: small;
-                color: var(--color-primary);
-            }
-    
-            .tags {
-                display: flex;
-                flex-direction: row;
-                gap: 10px;
-                font-weight: 300;
-                font-size: small;
-                flex-wrap: wrap;
-                justify-content: center;
-    
-                span {
-                    background-color: var(--color-primary);
-                    color: var(--color-text-light);
-                    border-radius: 5px;
-                    padding: 5px 10px;
-                    font-size: small;
-                }
-            }
-        }
-
-        .popup-desc {
-            width: 100%;
-            padding: 2rem 0rem;
-            text-align: justify;
-
-            b {
-                font-weight: 600;
-                font-size: 0.9rem;
-            }
-
-            a {
-                color: var(--color-primary);
-            }
-
-            a:hover {
-                text-decoration: underline;
-            }
-
-            .popup-images {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin: 2rem 0;
-            }
-
-            .popup-keywords {
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: center;
-                margin: 2rem 0;
-            }
-    
-            .popup-keyword {
-                padding: 0.5rem;
-                font-size: small;
-                color: var(--color-primary);
-                font-style: italic;
-            }
-        }
-    }
+}
+.project-popup .popup-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid var(--color-a);
+}
+.project-popup .popup-header .popup-space {
+    padding: 1.5rem;
+}
+.project-popup .popup-header .card-title {
+    margin-top: 2.5rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+.project-popup .popup-header .popup-close {
+    margin: 1rem;
+    cursor: pointer;
+    transition: none;
+}
+.project-popup .popup-header .popup-close:hover {
+    color: #f00;
+}
+.project-popup .popup-body {
+    padding: 1rem;
+    width: 60%;
+}
+.project-popup .popup-body .popup-img {
+    width: 100%;
+    height: auto;
+    margin: 1rem 0;
+}
+.project-popup .popup-body .popup-cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.project-popup .popup-body .popup-cont .date {
+    font-weight: 300;
+    font-size: small;
+    color: var(--color-primary);
+}
+.project-popup .popup-body .popup-cont .tags {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-weight: 300;
+    font-size: small;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project-popup .popup-body .popup-cont .tags span {
+    background-color: var(--color-primary);
+    color: var(--color-text-light);
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: small;
+}
+.project-popup .popup-body .popup-desc {
+    width: 100%;
+    padding: 2rem 0rem;
+    text-align: justify;
+}
+.project-popup .popup-body .popup-desc b {
+    font-weight: 600;
+    font-size: 0.9rem;
+}
+.project-popup .popup-body .popup-desc a {
+    color: var(--color-primary);
+}
+.project-popup .popup-body .popup-desc a:hover {
+    text-decoration: underline;
+}
+.project-popup .popup-body .popup-desc .popup-images {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 0;
+}
+.project-popup .popup-body .popup-desc .popup-keywords {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 2rem 0;
+}
+.project-popup .popup-body .popup-desc .popup-keyword {
+    padding: 0.5rem;
+    font-size: small;
+    color: var(--color-primary);
+    font-style: italic;
 }
