--- a/src/components/cards/project-card/project-card.css
+++ b/src/components/cards/project-card/project-card.css
@@ -61,6 +61,7 @@
 }
 .project-card:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 .popup-bg {
     position: fixed;
